--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -15,16 +15,48 @@
 .side-bar-header {
   height: 100px;
   padding: 0 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 
+}
+
+.header-name a {
+  font-size: 16px;
+  color: #FAFAFA;
+  text-decoration: none;
+
+
+}
+
+.create-room {
+  font-size: 10px;
+}
+
+.create-room a {
+  color: deepskyblue;
+  border: 1px solid lightblue;
+  text-decoration: none;
+  padding: 14px;
 }
 
 .rooms {
   background-color: #2f3e51;
   height: calc( 100vh - 100px );
   padding: 0 20px;
+  overflow: scroll;
 
 }
 
+.room {
+  padding: 20px 0 40px ;
+
+}
+
+.room-name a {
+  color: white;
+  text-decoration: none;
+}
 
 
 .chat {
